--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>运营中心</title>
+    <title>商户平台</title>
   </head>
   <body>
     <div id="app"></div>
